FlightPath 4.x Changelog
========================


----------------
RELEASED 4.6.1
----------------


2014-10-22
  Bug fix for PHP 5.4 and above, removed call-time pass by reference code in the batch.module file.


2014-09-22
  Added bug fix to forms.inc, where sometimes a form's title would appear twice on the page.
  
  Updated advise.history.inc to use functions in the comments module to display comments.


----------------
RELEASED 4.6
----------------


2014-07-30
  Added a new Batch API for processing large amounts of data without a timeout.  Modified system.install and system.module to work with the new Batch module.
  
  Minor changes and corrections in other files.

  Added a new Student Progress Report to the Stats module, which takes advantage of the new Batch API, due to it taking such
  a long time to run.
  

2014-06-23
  Modified the Stats module, so that its main menu page simply displays any menu item that begins
  with the path "stats/reports".  This allows users to create new reports in custom modules, and the
  links will still appear on that page.  Ex:  stats/reports/my-custom-report.  Just make sure that
  the "type" => MENU_TYPE_NORMAL_ITEM and the url begins with "stats/reports".  And remember to clear
  cache after creating any new menu items.
  
  
----------------
RELEASED 4.5.1
----------------


2014-06-20
  Added new variable to AdvisingScreen - bool_force_pie_charts.  If set to true, the pie charts
  will appear no matter what else is set.
  

2014-06-10
  Added new footnote section to AdvisingScreen - showing transfer eqvs which have been removed.

  Also made changes to how the POST is saved for an advising session- it now checks to make sure
  it is not a duplicate post (from the user hitting Refresh). 


2014-06-09
  Created new settings in the School data form, so users can change the title and notice
  for the Developmentals semester block.


2014-05-13